<resources>
    <string name="app_name">Wrist training</string>
    <string name="by_the_amount">by the amount</string>
    <string name="count">count</string>
    <string name="for_the_time">for the time</string>
    <string name="onTime"> 1 minute </string>

    <string name="choice_training">Choice training</string>
    <string name="show_statistics">Show statistics</string>

    <string name="title_activity_show_statistics">ActivityShowStatistics</string>

    <string name="start_training">Start training</string>
    <string name="finish_training">Finish training</string>
    <string name="prompt">Here you can leave your comment</string>
    <string name="by_created">Created by Vadim Novikov</string>

    <string name="start_time">Start time</string>
    <string name="finish_time">Finish time</string>
    <string name="coun">Count</string>
    <string name="seconds">Seconds</string>
    <string name="comment">Comment</string>
</resources>
