<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alucard.p1_acceleration.MainActivity">


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rBcount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/by_the_amount"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/end_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/count"
                android:inputType="number"
                android:text="100"
                android:textAlignment="center"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rBtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/for_the_time"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onTime"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnTraining"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:text="@string/start_training" />

        <TextView
            android:id="@+id/tvText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coun"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/etShowCount"
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/tvText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/etShowTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textSize="36sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
